--- a/index.html
+++ b/index.html
@@ -33,17 +33,14 @@
           <li class="nav-item"><a class="nav-link" href="#news">NEWS</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
           <li class="dropdown nav-item">
-          <a class="drop nav-link" href="#">LOGIN<span class="caret"></span></a>
-            <div class="dropdown-content">
-              <a class="dropdown-link" href="#">Employee Login</a>
-              <a class="dropdown-link" href="#">Member Login</a>
-            </div>
-          </div>
-        <!--  <ul class="dropdown-menu">
-            <li class="dropdown-item"><a class="dropdown-link" href="#nav-link" href="#">Employee Login</a></li>
-            <li class="dropdown-item"><a class="dropdown-link" href="#">Member Login</a></li>
+          <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">LOGIN
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li class="nav-item"><a class="nav-link" href="#">Employee Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Member Login</a></li>
           </ul>
-        </li> -->
+        </li>
+        <li><a class="nav-link" href="#"><span class="glyphicon glyphicon-search"></span></a></li>
         </ul>
       </div>
     </div>
