--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item"><a class="nav-link" href="#home">HOME</a></li>
-          <li class="nav-item"><a class="nav-link" href="#services">SERVICES & AMENITIES</a></li>
-          <li class="nav-item"><a class="nav-link" href="#news">NEWS</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">SERVICES & AMENITIES</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">NEWS</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
           <li class="dropdown nav-item">
           <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">LOGIN
           <span class="caret"></span></a>
