added link to events page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
           <li class="nav-item"><a class="nav-link" href="#">SERVICES & AMENITIES</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">EVENTS</a></li>
+          <li class="nav-item"><a class="nav-link" href="events.html">EVENTS</a></li>
           <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
           <li class="dropdown nav-item">
           <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">LOGIN
@@ -45,6 +45,7 @@
       </div>
     </div>
   </nav>
+  
 
   <!-- Jumbotron -->
 <div class="jumbotron jumbotron-image">
