updated events page

--- a/events.html
+++ b/events.html
@@ -10,6 +10,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="events.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="myScript.js"></script>
@@ -45,6 +46,55 @@
           </div>
         </div>
       </nav>
+
+
+       <!-- Jumbotron -->
+<div class="jumbotron jumbotron-image">
+</div>
+
+<div class="event-container">
+<div class="eventcontent">
+  <h3 class="titleevent">Event Name</h3>
+    <img src="dummy-image.jpeg">
+  <p>Event Details Goes Here</p>
+  <button class="attend-signup" type="submit">Attend</button>
+</div>
+<div class="eventcontent">
+  <h3 class="titleevent">Event Name</h3>
+    <img src="dummy-image.jpeg">
+  <p>Event Details Goes Here</p>
+  <button class="attend-signup" type="submit">Attend</button>
+</div>
+<div class="eventcontent">
+  <h3 class="titleevent">Event Name</h3>
+    <img src="dummy-image.jpeg">
+  <p>Event Details Goes Here</p>
+  <button class="attend-signup" type="submit">Attend</button>
+</div>
+</div>
+
+<div class="event-container">
+  <div class="eventcontent">
+    <h3 class="titleevent">Event Name</h3>
+      <img src="dummy-image.jpeg">
+    <p>Event Details Goes Here</p>
+    <button class="attend-signup" type="submit">Attend</button>
+  </div>
+  <div class="eventcontent">
+    <h3 class="titleevent">Event Name</h3>
+      <img src="dummy-image.jpeg">
+    <p>Event Details Goes Here</p>
+    <button class="attend-signup" type="submit">Attend</button>
+  </div>
+  <div class="eventcontent">
+    <h3 class="titleevent">Event Name</h3>
+      <img src="dummy-image.jpeg">
+    <p>Event Details Goes Here</p>
+    <button class="attend-signup" type="submit">Attend</button>
+  </div>
+  </div>
+
+
 </body>
 
 </html>
