Add member login page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="nav-item"><a class="nav-link" href="#">Employee Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Member Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="/web-application/member-login.html">Member Login</a></li>
           </ul>
         </li>
         <li><a class="nav-link" href="#"><span class="glyphicon glyphicon-search"></span></a></li>
@@ -105,8 +105,8 @@
 </div>
 
 <!-- Container Bottom -->
-<div class="container-fluid bg-2">
-  <div id="contact" class="container bg-2">
+<div class="container-fluid bg-3">
+  <div id="contact" class="container bg-3">
     <h3 class="text-center">Contact</h3>
 
     <div class="row">
