--- a/events.html
+++ b/events.html
@@ -38,7 +38,7 @@
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li class="nav-item"><a class="nav-link" href="#">Employee Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Member Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="member-login.html">Member Login</a></li>
               </ul>
             </li>
             <li><a class="nav-link" href="#"><span class="glyphicon glyphicon-search"></span></a></li>
