--- a/events.html
+++ b/events.html
@@ -94,7 +94,13 @@
   </div>
   </div>
 
-
+  <!-- Footer -->
+<footer class="text-center bg-1 mb-0">
+  <a class="up-arrow" href="#myNavbar" data-toggle="tooltip" title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br><br><br><br><br><br>
+  <p>Footer</p>
+</footer>
 </body>
 
 </html>
