Added employee login page

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">LOGIN
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li class="nav-item"><a class="nav-link" href="#">Employee Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="/web-application/member-login.html">Member Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="employee-login.html">Employee Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="member-login.html">Member Login</a></li>
           </ul>
         </li>
         <li><a class="nav-link" href="#"><span class="glyphicon glyphicon-search"></span></a></li>
