--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
               <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">LOGIN
               <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li class="nav-item"><a class="nav-link" href="#">Employee Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="employee-login.html">Employee Login</a></li>
                 <li class="nav-item"><a class="nav-link" href="member-login.html">Member Login</a></li>
               </ul>
             </li>
