--- a/employee-login.html
+++ b/employee-login.html
@@ -17,33 +17,87 @@
 </head>
 
 <body>
-    <div class="container bg-3 h-100 w-100">
-        <div class="container bg-4 m-auto">
-            <div class="row">
-                <div class="col-md-offset-3 col-md-6">
-                    <form class="form-horizontal">
-                        <span class="heading">Log In</span>
-                        <div class="form-group">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email or Username">
-                            <i class="fa fa-user"></i>
-                        </div>
-                        <div class="form-group help">
-                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                            <i class="fa fa-lock"></i>
-                            <a href="#" class="fa fa-question-circle"></a>
-                        </div>
-                        <div class="form-group">
-                            <div class="main-checkbox">
-                                <input type="checkbox" value="None" id="checkbox1" name="check">
-                                <label for="checkbox1"></label>
-                            </div>
-                            <span class="text">Remember me</span>
-                            <button type="submit" class="btn btn-default">log in</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+     <!-- Navbar -->
+  <nav class="navbar bg-1 pt-0 pb-0">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand nav-link" href="#myPage">Logo</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">SERVICES & AMENITIES</a></li>
+          <li class="nav-item"><a class="nav-link" href="events.html">EVENTS</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
+          <li class="dropdown nav-item">
+          <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">LOGIN
+          <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li class="nav-item"><a class="nav-link" href="employee.html">Employee Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="member-login.html">Member Login</a></li>
+          </ul>
+        </li>
+        <li><a class="nav-link" href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
+  <!-- login form -->
+  <section class="vh-100">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-6 text-black">
+  
+          <div class="px-5 ms-xl-4">
+            <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
+            <span class="h1 fw-bold mb-0">Logo</span>
+          </div>
+  
+          <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+  
+            <form style="width: 23rem;">
+  
+              <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3>
+  
+              <div class="form-outline mb-4">
+                <input type="email" id="form2Example18" class="form-control form-control-lg" />
+                <label class="form-label" for="form2Example18">Email address</label>
+              </div>
+  
+              <div class="form-outline mb-4">
+                <input type="password" id="form2Example28" class="form-control form-control-lg" />
+                <label class="form-label" for="form2Example28">Password</label>
+              </div>
+  
+              <div class="pt-1 mb-4">
+                <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
+              </div>
+  
+              <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
+              <p>Don't have an account? <a href="#!" class="link-info">Register here</a></p>
+  
+            </form>
+  
+          </div>
+  
+        </div>
+        <div class="col-sm-6 px-0 d-none d-sm-block">
+          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img3.webp" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+        </div>
+      </div>
+    </div>
+  </section>
+    <!-- Footer -->
+<footer class="text-center bg-1 mb-0">
+    <a class="up-arrow" href="#myNavbar" data-toggle="tooltip" title="TO TOP">
+      <span class="glyphicon glyphicon-chevron-up"></span>
+    </a><br><br><br><br><br><br>
+    <p>Footer</p>
+  </footer>
 </body>
 </html>
