--- a/index.html
+++ b/index.html
@@ -8,15 +8,45 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  <link rel="stylesheet" href="index.css">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="myScript.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  <script src="myScript.js"></script>
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-sm h-100 bg-1">
+    <div class="container-fluid h-100">
+      <a class="navbar-brand nav-link" href="#">LOGO</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse h-100" id="navbarNavDropdown">
+        <ul class="nav navbar-nav ms-auto h-100 ">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">SERVICES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="events.html">EVENTS</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              LOGIN
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
+              <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!--
   <nav class="navbar bg-1 pt-0 pb-0">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -46,7 +76,7 @@
       </div>
     </div>
   </nav>
-  
+  -->
 
   <!-- Jumbotron -->
 <div class="jumbotron jumbotron-image">
@@ -87,7 +117,6 @@
   <div class="container">
     <h3 class="text-center">Lorem Ipsum</h3>
     <p class="text-center">Lorem ipsum we'll play you some music.</p>
-
     <div class="row text-center">
       <div class="col-sm-4">
           <p><strong>Lorem Ipsum</strong></p>
