Fixed contact section

--- a/events.html
+++ b/events.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm h-100 bg-1">
+  <nav class="navbar navbar-expand-sm h-100 bg-1" id="top">
     <div class="container-fluid h-100">
       <a class="navbar-brand nav-link" href="#">LOGO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -96,11 +96,11 @@
   </div>
 
   <!-- Footer -->
-<footer class="text-center bg-1 mb-0">
-  <a class="up-arrow" href="#myNavbar" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a><br><br><br><br><br><br>
-  <p>Footer</p>
+  <footer class="text-center bg-1 mb-0">
+    <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
+      <span class="fa fa-chevron-up"></span>
+    </a><br><br><br><br><br><br>
+    <p>Footer</p>
 </footer>
 </body>
 
