--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  <link rel="stylesheet" href="index.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  <script src="myScript.js"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm h-100 bg-1">
+  <nav class="navbar navbar-expand-sm h-100 bg-1" id="top">
     <div class="container-fluid h-100">
       <a class="navbar-brand nav-link" href="#">LOGO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -136,13 +138,13 @@
 <!-- Container Bottom -->
 <div class="container-fluid bg-3">
   <div id="contact" class="container bg-3">
-    <h3 class="text-center">Contact</h3>
+    <h3 class="text-center">Contact Us</h3>
 
-    <div class="row">
+    <div class="row ft">
       <div class="col-md-4">
-        <p><span class="glyphicon glyphicon-map-marker"></span> Miami, US</p>
-        <p><span class="glyphicon glyphicon-phone"></span> Phone: +00 1515151515</p>
-        <p><span class="glyphicon glyphicon-envelope"></span> Email: mail@mail.com</p>
+        <p><span class="fa fa-map-pin"></span> Miami, US</p>
+        <p><span class="fa fa-phone"></span> Phone: +00 1515151515</p>
+        <p><span class="fa fa-envelope"></span> Email: mail@mail.com</p>
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -153,7 +155,7 @@
             <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
           </div>
         </div>
-        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+        <textarea class="form-control comments" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
         <br>
         <div class="row">
           <div class="col-md-12 form-group">
@@ -168,8 +170,8 @@
 
 <!-- Footer -->
 <footer class="text-center bg-1 mb-0">
-  <a class="up-arrow" href="#myNavbar" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
+  <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
+    <span class="fa fa-chevron-up"></span>
   </a><br><br><br><br><br><br>
   <p>Footer</p>
 </footer>
