--- a/member-login.html
+++ b/member-login.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-sm h-100 bg-1">
+  <nav class="navbar navbar-expand-sm h-100 bg-1" id="top">
     <div class="container-fluid h-100">
       <a class="navbar-brand nav-link" href="#">LOGO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
 
 <!-- Login Container -->
 <div class="container w-100 bg-3 height">
-    <div class="flex bg-2 justify-content-center align-item-center">
+    <div class="flex bg-2 justify-content-center align-item-center w-100">
         <form class="form-signin">
             <h1 class="h3 mb-3 font-weight-normal text-center">Please sign in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
@@ -71,10 +71,10 @@
 
 <!-- Footer -->
 <footer class="text-center bg-1 mb-0">
-  <a class="up-arrow" href="#myNavbar" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a><br><br><br><br><br><br>
-  <p>Footer</p>
+    <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
+      <span class="fa fa-chevron-up"></span>
+    </a><br><br><br><br><br><br>
+    <p>Footer</p>
 </footer>
   <script src="js/scripts.js"></script>
 </body>
