Updated login pages

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
               LOGIN
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
               <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+              <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
             </ul>
           </li>
         </ul>
@@ -149,13 +149,13 @@
       <div class="col-md-8">
         <div class="row">
           <div class="col-sm-6 form-group">
-            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+            <input class="form-control fc" id="name" name="name" placeholder="Name" type="text" required>
           </div>
           <div class="col-sm-6 form-group">
-            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+            <input class="form-control fc" id="email" name="email" placeholder="Email" type="email" required>
           </div>
         </div>
-        <textarea class="form-control comments" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+        <textarea class="form-control fc comments" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
         <br>
         <div class="row">
           <div class="col-md-12 form-group">
