--- a/employee-login.html
+++ b/employee-login.html
@@ -41,8 +41,8 @@
                   LOGIN
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
                   <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+                  <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
                 </ul>
               </li>
             </ul>
@@ -54,18 +54,13 @@
   <section class="vh-100">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6 text-black">
-  
-          <div class="px-5 ms-xl-4">
-            <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
-            <span class="h1 fw-bold mb-0">Logo</span>
-          </div>
+        <div class="col-sm-6 text-black bg-3">
   
           <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
   
             <form style="width: 23rem;">
   
-              <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3>
+              <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Employee Login</h3>
   
               <div class="form-outline mb-4">
                 <input type="email" id="form2Example18" class="form-control form-control-lg" />
@@ -90,7 +85,7 @@
   
         </div>
         <div class="col-sm-6 px-0 d-none d-sm-block">
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img3.webp" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+          <img src="bdbdbd.png" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
         </div>
       </div>
     </div>
