--- a/member-login.html
+++ b/member-login.html
@@ -41,8 +41,8 @@
               LOGIN
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
               <li><a class="dropdown-item" href="member-login.html">MEMBER LOGIN</a></li>
+              <li><a class="dropdown-item" href="employee-login.html">EMPLOYEE LOGIN</a></li>
             </ul>
           </li>
         </ul>
@@ -51,10 +51,10 @@
   </nav>
 
 <!-- Login Container -->
-<div class="container w-100 bg-3 height">
+<div class="container-fluid w-100 bg-3 height">
     <div class="flex bg-2 justify-content-center align-item-center w-100">
         <form class="form-signin">
-            <h1 class="h3 mb-3 font-weight-normal text-center">Please sign in</h1>
+            <h1 class="h3 mb-3 font-weight-normal text-center">Member Login</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
             <label for="inputPassword" class="sr-only">Password</label>
