--- a/employee-login.html
+++ b/employee-login.html
@@ -63,17 +63,17 @@
               <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Employee Login</h3>
   
               <div class="form-outline mb-4">
-                <input type="email" id="form2Example18" class="form-control form-control-lg" />
-                <label class="form-label" for="form2Example18">Email address</label>
+                <input type="email" id="inputEmail" class="form-control form-control-lg" required autofocus />
+                <label class="form-label" for="inputEmail">Email address</label>
               </div>
   
               <div class="form-outline mb-4">
-                <input type="password" id="form2Example28" class="form-control form-control-lg" />
-                <label class="form-label" for="form2Example28">Password</label>
+                <input type="password" id="inputPassword" class="form-control form-control-lg" required />
+                <label class="form-label" for="inputPassword">Password</label>
               </div>
   
               <div class="pt-1 mb-4">
-                <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
+                <button class="btn btn-info btn-lg btn-block" type="submit">Login</button>
               </div>
   
               <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
