Fixed circle image on home page

--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
       <div class="col-sm-4">
         <p class="text-center"><strong>Name</strong></p><br>
         <a href="#demo">
-          <img src="dummy-image.jpeg" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
       <div class="col-sm-4">
         <p class="text-center"><strong>Name</strong></p><br>
         <a href="#demo2">
-          <img src="dummy-image.jpeg" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
       <div class="col-sm-4">
         <p class="text-center"><strong>Name</strong></p><br>
         <a href="#demo3">
-          <img src="dummy-image.jpeg" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="dummy-image.jpeg" class="rounded-circle person" alt="Random Name" width="255" height="255">
         </a>
       </div>
     </div>
