--- a/events.html
+++ b/events.html
@@ -55,54 +55,35 @@
 </div>
 
 <div class="event-container">
-<div class="eventcontent">
-  <h3 class="titleevent">Event Name</h3>
-    <img src="dummy-image.jpeg">
+<div class="eventcontent-1">
+  <h3 class="titleevent-right">Event Name</h3>
   <p>Event Details Goes Here</p>
-  <button class="attend-signup" type="submit">Attend</button>
+  <img src="dummy-image.jpeg">
+  <!--<button class="attend-signup" type="submit">Attend</button>-->
 </div>
-<div class="eventcontent">
-  <h3 class="titleevent">Event Name</h3>
-    <img src="dummy-image.jpeg">
+<div class="eventcontent-2">
+  <h3 class="titleevent-left">Event Name</h3>
   <p>Event Details Goes Here</p>
-  <button class="attend-signup" type="submit">Attend</button>
+  <img src="dummy-image.jpeg">
+  <!-- <button class="attend-signup" type="submit">Attend</button>-->
 </div>
-<div class="eventcontent">
-  <h3 class="titleevent">Event Name</h3>
-    <img src="dummy-image.jpeg">
+<div class="eventcontent-3">
+  <h3 class="titleevent-right">Event Name</h3>
   <p>Event Details Goes Here</p>
-  <button class="attend-signup" type="submit">Attend</button>
+  <img src="dummy-image.jpeg">
+ <!-- <button class="attend-signup" type="submit">Attend</button>-->
 </div>
 </div>
 
-<div class="event-container">
-  <div class="eventcontent">
-    <h3 class="titleevent">Event Name</h3>
-      <img src="dummy-image.jpeg">
-    <p>Event Details Goes Here</p>
-    <button class="attend-signup" type="submit">Attend</button>
-  </div>
-  <div class="eventcontent">
-    <h3 class="titleevent">Event Name</h3>
-      <img src="dummy-image.jpeg">
-    <p>Event Details Goes Here</p>
-    <button class="attend-signup" type="submit">Attend</button>
-  </div>
-  <div class="eventcontent">
-    <h3 class="titleevent">Event Name</h3>
-      <img src="dummy-image.jpeg">
-    <p>Event Details Goes Here</p>
-    <button class="attend-signup" type="submit">Attend</button>
-  </div>
-  </div>
+  
 
   <!-- Footer -->
-  <footer class="text-center bg-1 mb-0">
+ <!-- <footer class="text-center bg-1 mb-0">
     <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
       <span class="fa fa-chevron-up"></span>
     </a><br><br><br><br><br><br>
     <p>Footer</p>
-</footer>
+</footer> -->
 </body>
 
 </html>
