update on events page

--- a/events.html
+++ b/events.html
@@ -59,18 +59,21 @@
   <h3 class="titleevent-right">Event Name</h3>
   <p>Event Details Goes Here</p>
   <img src="dummy-image.jpeg">
+  <span class="date">Mar 01</span>
   <!--<button class="attend-signup" type="submit">Attend</button>-->
 </div>
 <div class="eventcontent-2">
   <h3 class="titleevent-left">Event Name</h3>
   <p>Event Details Goes Here</p>
   <img src="dummy-image.jpeg">
+  <span class="date">Mar 01</span>
   <!-- <button class="attend-signup" type="submit">Attend</button>-->
 </div>
 <div class="eventcontent-3">
   <h3 class="titleevent-right">Event Name</h3>
   <p>Event Details Goes Here</p>
   <img src="dummy-image.jpeg">
+  <span class="date">Mar 01</span>
  <!-- <button class="attend-signup" type="submit">Attend</button>-->
 </div>
 </div>
@@ -78,12 +81,12 @@
   
 
   <!-- Footer -->
- <!-- <footer class="text-center bg-1 mb-0">
+  <footer class="text-center bg-1 mb-0">
     <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
       <span class="fa fa-chevron-up"></span>
     </a><br><br><br><br><br><br>
     <p>Footer</p>
-</footer> -->
+</footer> 
 </body>
 
 </html>
