Updated footer on events page.

--- a/events.html
+++ b/events.html
@@ -82,11 +82,16 @@
 
   <!-- Footer -->
   <footer class="text-center bg-1 mb-0">
-    <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
-      <span class="fa fa-chevron-up"></span>
+    <a href="#top" data-toggle="tooltip" title="TO TOP">
+      <span class="fa-stack fa-1x">
+        <i class="fa fa-circle fa-stack-1x"></i>
+        <i class="fa fa-chevron-up fa-stack-1x"></i>
+      </span>
     </a><br><br><br><br><br><br>
     <p>Footer</p>
-</footer>
+    <div class="container-fluid bg-ft">
+    </div>
+  </footer>
 </body>
 
 </html>
