--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </div>
 
 <!-- Container Middle -->
-<div id="tour">
+<div class="container-fluid pt-3 pb-2">
   <div class="container">
     <h3 class="text-center">Lorem Ipsum</h3>
     <p class="text-center">Lorem ipsum we'll play you some music.</p>
