updated events page

--- a/events.html
+++ b/events.html
@@ -59,21 +59,25 @@
   <h3 class="titleevent-right">Event Name</h3>
   <p>Event Details Goes Here</p>
   <img src="dummy-image.jpeg">
-  <span class="date">Mar 01</span>
+  <div class="date">01</div>
+  <div class="month">March</div>
+  
   <!--<button class="attend-signup" type="submit">Attend</button>-->
 </div>
 <div class="eventcontent-2">
   <h3 class="titleevent-left">Event Name</h3>
   <p>Event Details Goes Here</p>
   <img src="dummy-image.jpeg">
-  <span class="date">Mar 01</span>
+  <div class="date">01</div>
+  <div class="month">March</div>
   <!-- <button class="attend-signup" type="submit">Attend</button>-->
 </div>
 <div class="eventcontent-3">
   <h3 class="titleevent-right">Event Name</h3>
   <p>Event Details Goes Here</p>
   <img src="dummy-image.jpeg">
-  <span class="date">Mar 01</span>
+  <div class="date">01</div>
+  <div class="month">March</div>
  <!-- <button class="attend-signup" type="submit">Attend</button>-->
 </div>
 </div>
